# signature

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  give_hash.py  hashcalc.cpp  hashcalc.h  main.cpp  tests.cpp  utils.h
test_files/: 1024a.txt  3chars.txt
